# python-rpg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  genpoly_rpg.c  pyproject.toml  rpg_module.c  setup.py
cmake/: gitversion.cmake
src/genpoly_rpg/: __init__.py
