[build-system]
requires = ["scikit-build-core", "numpy", "setuptools", "wheel", "cmake>=3.15"]
build-backend = "scikit_build_core.build"

[project]
name = "genpoly_rpg"
version = "1.0.0"
description = "Python interface for Random Polygon Generator (RPG)"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0"}
authors = [
    {name = "Original RPG Library: T. Auer, M. Gschwandtner, M. Heimlich, M. Held", email = "held@cs.sbg.ac.at"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/cgalab/genpoly-rpg"
"Bug Tracker" = "https://github.com/cgalab/genpoly-rpg/issues"

[tool.scikit-build]
wheel.packages = ["src/genpoly_rpg"]
cmake.minimum-version = "3.15"
cmake.source-dir = "."
cmake.build-type = "Release"
cmake.verbose = true
sdist.include = ["src/genpoly_rpg/*.py", "genpoly_rpg.c", "CMakeLists.txt", "cmake/*.cmake"]
sdist.exclude = ["build", "dist", ".git"]

[tool.scikit-build.cmake.define]
SKBUILD = "ON"